--- a/index.html
+++ b/index.html
@@ -1,73 +1,16 @@
 <html>
   <head>
-    <title>index</title>
+    <title>homepage</title>
+    <link rel="Stylesheet" href="style.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   </head>
   <body>
-    <div id="meme">
-
-      <img src="https://pbs.twimg.com/profile_images/939704083870498816/tvtROy9e.jpg">
- 
       <h1>Fangzheng Li</h1>       
-
+      <img src="https://pbs.twimg.com/profile_images/939704083870498816/tvtROy9e.jpg">
       <h2>I'm a 4th year Computer Science major Bachelor student at Illinois tech, experienced in programming and mathematics.<br> 
-
-        I'm also capable of JavaScript/Python and proficient in Excel/PowerPoint and adept at writing skills/design capability.</h2>
-      <div class="silex-element-content normal"><h3><a href="https://coldstringsama.github.io/resumedraft/" class="heading2">resume</a></h3></div>
-    </div>
-
-    <style>
-
-      body {
-        background-color: lightblue;
-      }
-
-      #meme {
-        position: relative;
-        margin: 50px auto;
-        width: 600px;
-      }
-
-      h1, h2, h3{
-        font-family: "Open Sans", sans-serif;
-        text-align: center;
-        margin: 0 auto;
-        width: 100%;
-       
-      }
-
-      h1 {
-        color: black;
-        font-family: "Open Sans", sans-serif;
-        font-size: 50px;
-        position: absolute;
-        top: 6px;
-      }
-
-      h2 {
-        color: black;
-        font-family: "Open Sans", sans-serif;
-        font-size: 25px;
-        position: absolute;
-        
-        width: 100%;
-      }
-      h3 {
-        color: black;
-        font-family: "Open Sans", sans-serif;
-        font-size: 25px;
-        position: absolute;
-        top: -40px;
-        width: 100%;
-      }
-      img {
-        border: 10px solid white;
-        box-shadow: 0px 3px 5px rgba(0,0,0,.4);
-        margin: 0 auto;
-        display: block;
-        box-sizing: border-box;
-        width: 100%;
-      }
-    </style>
+       I love photographing and travelling, I'll post some of my photos on my page later.<br>
+        Feel free to take a look at my resume, have a good day! </h2><br>
+      <h3><a href="https://coldstringsama.github.io/resumedraft/" class="heading2">resume</a></h3>
 
   </body>  
 </html>
